--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,11 @@
 name: Run test jobs
 on:
   pull_request:
-  workflow_call:
 
 concurrency:
   group: test-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  mockstacktest:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone this git repository
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
-
-      - name: Install docker-compose
-        run: make docker-compose/install
-
-      - name: Start the mock AWS stack
-        run: make mockstack/up
-
-      - name: Apply Terraform test configs in mock AWS stack
-        run: make mockstack/pytest
-
-      - name: Cleanup the mock AWS stack
-        run: make mockstack/clean
+  test:
+    uses: plus3it/actions-workflows/.github/workflows/test.yml@269d875599c92395f7fa99cab43edc1820798e61
